--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
+logging.level.org.springframework.security=DEBUG
